--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -20,14 +20,14 @@
     <!-- Full path to the sysfs toggle -->
     <string name="flashDevice">/sys/class/leds/led:flash_torch/brightness</string>
 
-    <!-- Lowest setting -->
-    <integer name="valueOn">5</integer>
-    <!-- Middle setting -->
-    <integer name="valueHigh">145</integer>
+    <!-- Low setting -->
+    <integer name="valueLow">-1</integer>
+	<!-- Middle setting -->
+    <integer name="valueHigh">-1</integer>
     <!-- Highest setting, leave -1 if it doesn't exist -->
-    <integer name="valueDeathRay">255</integer>
+    <integer name="valueDeathRay">-1</integer>
 
     <!-- If the device supports high brightness mode, enable this -->
-    <bool name="hasHighBrightness">true</bool>
+    <bool name="hasHighBrightness">false</bool>
 
 </resources>
