--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -39,7 +39,7 @@
              android:removable="false"
 			 android:mtpReserve="100"
              android:allowMassStorage="true" />
-    <storage android:mountPoint="/storage/extSdCard"
+    <storage android:mountPoint="/storage/sdcard1"
              android:storageDescription="@string/storage_sd_card"
              android:primary="false"
              android:emulated="false"
