overlay: Update MMS and Torch configs

--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -23,7 +23,10 @@
     <!-- Highest setting, leave -1 if it doesn't exist -->
     <integer name="valueDeathRay">-1</integer>
 
-    <!-- If the device supports high brightness mode, enable this -->
-    <bool name="hasHighBrightness">false</bool>
+    <!-- Lowest setting -->
+    <integer name="valueOn">5</integer>
+
+    <!-- Middle setting -->
+    <integer name="valueHigh">15</integer>
 
 </resources>
