--- a/overlay/packages/apps/Mms/res/xml/mms_config.xml
+++ b/overlay/packages/apps/Mms/res/xml/mms_config.xml
@@ -26,10 +26,10 @@
     <bool name="enabledMMS">true</bool>
 
     <!-- Maximum message size in bytes for a MMS message -->
-    <int name="maxMessageSize">307200</int>
+    <int name="maxMessageSize">1045876</int>
 
     <!-- Maximum height for an attached image -->
-    <int name="maxImageHeight">1944</int>
+    <int name="maxImageHeight">2592</int>
 
     <!-- Maximum width for an attached image -->
     <int name="maxImageWidth">2592</int>
@@ -50,8 +50,11 @@
          set the limit above this value. -->
     <int name="maxMessageCountPerThread">5000</int>
 
+    <!-- User-Agent parameter used in MMS http request -->
+    <string name="userAgent">SAMSUNG-GT-I9300-Mms</string>
+
     <!-- UAProf URL -->
-    <string name="uaProfUrl">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
+    <string name="uaProfUrl">http://wap.samsungmobile.com/uaprof/GT-I9300.xml</string>
 
     <!-- Maximum number of recipients allowed per message. Use a value of -1
          to indicate no limit. -->
