--- a/overlay/packages/apps/Torch/res/values/config.xml
+++ b/overlay/packages/apps/Torch/res/values/config.xml
@@ -24,9 +24,12 @@
     <integer name="valueOn">100</integer>
 
     <!-- Middle setting -->
-    <integer name="valueHigh">150</integer>
+    <integer name="valueHigh">145</integer>
 
     <!-- Highest setting, leave -1 if it doesn't exist -->
-    <integer name="valueDeathRay">-1</integer>
+    <integer name="valueDeathRay">200</integer>
+
+    <!-- If the device supports high brightness mode, enable this -->
+    <bool name="hasHighBrightness">true</bool>
 
 </resources>
