--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -255,6 +255,9 @@
     <!-- Whether UI for multi user should be shown -->
     <bool name="config_enableMultiUserUI">true</bool>
 
+     <!-- Dont remove For Fixing AutoRotate -->
+    <bool name="config_useSystemClockforRotationSensor">true </bool>
+
     <string translatable="false" name="config_radio_access_family">GSM|WCDMA</string>
 
 </resources>
